[package]
name = "social_network_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0"
async-graphql-warp = "4.0"
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }